A new area (Admin) operations has been written.

--- a/YGN.StoreApp/YGN.StoreApp.csproj
+++ b/YGN.StoreApp/YGN.StoreApp.csproj
@@ -23,4 +23,15 @@
     <ProjectReference Include="..\YGN.StoreApp.Repositories\YGN.StoreApp.Repositories.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Areas\Admin\Views\Shared\_Layout.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
