The project has been reconfigured.

--- a/YGN.StoreApp/appsettings.json
+++ b/YGN.StoreApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlconnection": "Data Source = C:\\Sqlite3\\ProductDb.db"
+    "sqlconnection": "Server=DESKTOP-QC9EOLC;Database=YGN-S-MANAGEMENT-WEB-SPRINT.1;User ID=sa;Password=sapass;Trusted_Connection=False;TrustServerCertificate=True;"
   }
 }
