--- a/YGN.StoreApp/appsettings.json
+++ b/YGN.StoreApp/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"sqlconnection": "Server=DESKTOP-QC9EOLC;Database=YGN-S-MANAGEMENT-WEB-SPRINT.1;User ID=sa;Password=sapass;Trusted_Connection=False;TrustServerCertificate=True;"
-    "sqlconnection": "Server=mssql01.ihswin.com;Database=huseyinyegendb;User ID=yegen;Password=Huseyin2017!*;Trusted_Connection=False;TrustServerCertificate=True;"
-
+    "sqlconnection": "Server=DESKTOP-QC9EOLC;Database=YGN-S-MANAGEMENT-WEB-SPRINT.1;User ID=sa;Password=sapass;Trusted_Connection=False;TrustServerCertificate=True;"
+   
   }
 }
